k8s/backend-deploymelt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: jbaramidze/drawgame-backend
          ports:
            - containerPort: 3000
