k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    component: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo
  template:
    metadata:
      labels:
        component: mongo
    spec:
      volumes:
        - name: main-vol
          persistentVolumeClaim:
            claimName: mongo-pv-claim
      containers:
        - name: mongo
          image: jbaramidze/drawgame-mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: "/data/db"
              name: main-vol
              subPath: "mongo"
