k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    component: backend
  ports:
    - protocol: TCP
      port: 3000
