k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    component: mongo
  ports:
    - protocol: TCP
      port: 27017
