k8s/main-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            backend:
              serviceName: frontend-service
              servicePort: 2000
          - path: /api/(.*)
            backend:
              serviceName: backend-service
              servicePort: 3000
